    handle, or selecting them and pressing delete.
  * Remove Raul dependency.
  * Switch from FlowCanvas to Ganv (much improved looks and performance).
  * Remove LASH support and aggressively simplify UI.
  * Fix font configuration on OSX.
  * Use Mac style key bindings on OSX.
  * Integrate with Mac menu bar on OSX.
  * Support for DOT export for rendering with GraphViz.

 -- David Robillard <d@drobilla.net>  (UNRELEASED)

patchage (0.5.0) stable;

  * Auto-arrange interface modules sanely (align corresponding inputs/outputs)
  * Add -J (--no-jack) command line option
  * Add proper --help output and man page
  * Improve performance (dramatically for large setups)
  * Fancy console info/warning/error logging
  * Fix minor memory leaks and reduce memory consumption
  * Fix handling of ALSA duplex ports
  * Hide "split" module menu item when it is useless
  * Fix Jack D-Bus support
  * Mac OS X .app bundle port
  * Bump FlowCanvas dependency to 0.7.0
  * Add more/larger icons
  * Add missing COPYING file to distribution
  * Build system and code quality improvements

 -- David Robillard <d@drobilla.net>  Tue, 11 Jan 2011 17:42:07 -0500

patchage (0.4.5) stable;

  * Install SVG icon
  * Fix compilation without Jack
  * Improve performance when dragging modules
  * Bump FlowCanvas dependency to 0.6.0
  * Upgrade to waf 1.5.18

 -- David Robillard <d@drobilla.net>  Fri, 03 Sep 2010 20:24:36 -0400

patchage (0.4.4) stable;

  * Fix incorrect icon install paths

 -- David Robillard <d@drobilla.net>  Wed, 09 Dec 2009 10:17:37 -0500

patchage (0.4.3) stable;

  * Switch to waf build system
  * Fix compilation with GCC 4.4
  * Better ALSA support
  * Massive performance improvements when ALSA is enabled
  * Center on startup

 -- David Robillard <d@drobilla.net>  Tue, 08 Dec 2009 21:13:37 -0500

patchage (0.4.2) stable;

  * LASH support via D-BUS from ladi-patchage branch
  * Remove old LASH support via liblash
