@@ -764,16 +764,6 @@ Nedko Arnaudov &lt;nedko@arnaudov.name&gt;</property>
                       </object>
                     </child>
                     <child>
-                      <object class="GtkImageMenuItem" id="menu_store_positions">
-                        <property name="label">Save Positions</property>
-                        <property name="use_action_appearance">False</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="use_stock">False</property>
-                        <signal name="activate" handler="on_save_settings1_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
                       <object class="GtkSeparatorMenuItem" id="menu_file_draw_sep">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
